fix: new profile cover letter bug, skills parsing bug and text wrap issue, add certification

--- a/src/App.css
+++ b/src/App.css
@@ -348,6 +348,7 @@ nav {
     display: inline-block;
     margin: 0;
     flex: 0 1 auto;
+    text-wrap: wrap;
   }
 
   .skill-item span {
